# lowtex

./: .gitignore  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: DISTRIBUTION.md  gpu-paint-handoff.md  gpu-painting-plan.md
src/: app.rs  bake.rs  bleed.rs  bvh.rs  camera.rs  config.rs  effects.rs  export.rs  fill.rs  gpu_bake.rs  gpu_dab.rs  gpu_layers.rs  history.rs  layers.rs  main.rs  material.rs  mesh.rs  model.rs  noise.rs  paint.rs  palette.rs  particle.rs  perf.rs  preset.rs  project.rs  renderer.rs  surface.rs  tablet.rs  ui.rs  unwrap.rs
src/shaders/: bake.wgsl  bleed.wgsl  compass.wgsl  composite.wgsl  dab.wgsl  lines.wgsl  main.wgsl  post.wgsl  resolve.wgsl
