[package]
name = "lowtex"
version = "0.1.0"
edition = "2021"
description = "PSX-style 3D texture painter — v0.1 proof of paint"

[dependencies]
# Windowing + event loop
winit = "0.30"

# GPU abstraction
wgpu = "22.1"

# Async runtime for wgpu setup
pollster = "0.4"

# Math (vectors, matrices)
glam = { version = "0.29", features = ["bytemuck"] }

# Bytemuck for casting Rust structs to GPU buffers
bytemuck = { version = "1.18", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Image encode/decode (PNG export/import, headless screenshots)
image = { version = "0.25", default-features = false, features = ["png"] }

# Mesh import
gltf = { version = "1.4", default-features = false, features = ["import", "utils"] }
tobj = "4.0"

# Immediate-mode UI (egui) integrated with winit + wgpu. Pinned to 0.29 to match
# wgpu 22.
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = { version = "0.29", default-features = false }

# Native file dialogs (open/save).
rfd = "0.15"

# Indexed-PNG export for retro pipelines (true paletted PNG).
png = "0.17"

# Project (.lowtex) serialization.
serde = { version = "1", features = ["derive"] }
ron = "0.8"
base64 = "0.22"
