[package]
name = "lowtex"
version = "0.1.6"
edition = "2021"
description = "PSX-style 3D texture painter — v0.1 proof of paint"

[dependencies]
# Windowing + event loop
winit = "0.30"

# GPU abstraction
wgpu = "22.1"

# Async runtime for wgpu setup
pollster = "0.4"

# Math (vectors, matrices)
glam = { version = "0.29", features = ["bytemuck"] }

# Bytemuck for casting Rust structs to GPU buffers
bytemuck = { version = "1.18", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Data-parallelism for the CPU paint kernels (layer compositing, palette quantize).
rayon = "1.10"

# Image encode/decode (PNG export/import, headless screenshots)
image = { version = "0.25", default-features = false, features = ["png"] }

# Mesh import
gltf = { version = "1.4", default-features = false, features = ["import", "utils"] }
tobj = "4.0"

# Immediate-mode UI (egui) integrated with winit + wgpu. Pinned to 0.29 to match
# wgpu 22.
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = { version = "0.29", default-features = false }

# Catppuccin color themes for egui (egui29 feature matches our pin).
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui29"] }

# Native file dialogs (open/save).
rfd = "0.15"

# Indexed-PNG export for retro pipelines (true paletted PNG).
png = "0.17"

# Project (.lowtex) serialization.
serde = { version = "1", features = ["derive"] }
ron = "0.8"
base64 = "0.22"

# macOS pen pressure: winit 0.30 drops the pen fields, so we tap NSEvent
# directly with a local event monitor (see src/tablet.rs). Other platforms use a
# 1.0 stub and pull none of this.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "block2"] }
block2 = "0.6"

# Lean, fast shipping builds (G27): LTO + one codegen unit + stripped symbols.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
